2014-04-28  Michael Saboff  <msaboff@apple.com>

        REGRESSION(r153142) ASSERT from CodeBlock::dumpBytecode dumping String Switch Jump Tables
        https://bugs.webkit.org/show_bug.cgi?id=132315

        Reviewed by Mark Hahnenberg.

        Used the StringImpl version of utf8() instead of creating a String first.

        * bytecode/CodeBlock.cpp:
        (JSC::CodeBlock::dumpBytecode):

2014-04-28  Filip Pizlo  <fpizlo@apple.com>

        The LLInt is awesome and it should get more of the action.

        Rubber stamped by Geoffrey Garen.
        
        5% speed-up on JSBench and no meaningful regressions.  Should be a PLT/DYE speed-up also.

        * runtime/Options.h:

2014-04-27  Filip Pizlo  <fpizlo@apple.com>

        GC should be able to remove things from the DFG worklist and cancel on-going compilations if it knows that the compilation would already be invalidated
        https://bugs.webkit.org/show_bug.cgi?id=132166

        Reviewed by Oliver Hunt and Mark Hahnenberg.
        
        The GC can aid type inference by removing structures that are dead and jettisoning
        code that relies on those structures. This can dramatically accelerate type inference
        for some tricky programs.
        
        Unfortunately, we previously pinned any structures that enqueued compilations depended
        on. This means that if you're on a machine that only runs a single compilation thread
        and where compilations are relatively slow, you have a high chance of large numbers of
        structures being pinned during any GC since the compilation queue is likely to be full
        of random stuff.
        
        This comprehensively fixes this issue by allowing the GC to remove compilation plans
        if the things they depend on are dead, and to even cancel safepointed compilations.
        
        * bytecode/CodeBlock.cpp:
        (JSC::CodeBlock::shouldImmediatelyAssumeLivenessDuringScan):